--- a/video-server/package.json
+++ b/video-server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.3",
     "express-ws": "^5.0.2",
     "install": "^0.13.0",
+    "kurento-client": "^6.16.0",
     "nanoid": "^3.3.2",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
